--- a/apps/protobuf-ws-demo/package.json
+++ b/apps/protobuf-ws-demo/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "@protobuf-ts/plugin": "^2.8.2",
     "@sooboy/protobufws": "*",
-    "protobuf-ws": "*",
+    "@sooboy/protobuf-ws": "*",
     "parcel": "^2.8.0",
     "rxjs": "^7.5.7"
   },
