--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "antd": "^5.0.3",
     "md5": "^2.3.0",
     "protobufjs-cli": "^1.0.2",
     "rxjs": "7",
